sumo/tests/traci/ChangeLane/InvalidNode/options.traci
sumo.exe --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8820 --netstate-dump netstate_dump.xml TraCITestClient.exe -def changelane_invalidnode.prog -p 8820 -h localhost -o testclient_out.txt